<resources>
    <string name="ManageDoctorConsultationTitle">Doctor Consultations</string>
    <string name="ManagePatientProfileTitle">Patient Profile</string>
    <string name="app_name">Medico</string>
    <string name="action_settings">Settings</string>
    <string name="folder">Folder</string>
    <string name="parentDirectory">Parent Directory</string>
    <string name="fileSize">File Size</string>
    <string name="currentDir">Current Dir</string>
    <string name="loading_wait">Loading... Please wait...</string>
    <string name="error_network">Network error, try later!</string>
    <string name="error_no_response">No response from Server!</string>
    <string name="error_network_http_error">Malformed Response</string>
    <string name="error_unknown">Unknown Error</string>
    <string name="error_no_data_found">No records found!</string>
    <string name="add_visit">Add a visit</string>
    <string name="add_patient">Add Patient</string>
    <string name="short_patient">Sort Patient</string>
    <string name="filter_patient">Filter Patient</string>
    <string name="add_doctor">Add Doctor</string>
    <string name="short_doctor">Sort Doctor</string>
    <string name="filter_doctor">Filter Doctor</string>
    <string-array name="bloodgroup_list">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
    <string-array name="assistan_profession">
        <item>nurse</item>
    </string-array>
    <string-array name="drive_list">
        <item>Google Drive</item>
        <item>Dropbox</item>
    </string-array>
    <string-array name="visit_duration_unit">
        <item>Min</item>
        <item>Hour</item>
    </string-array>
    <string-array name="slot_number">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="access_level">
        <item></item>
        <item>Read Only</item>
        <item>Full Access</item>
    </string-array>
     <string name="appointment_status">Appointment Status : </string>
    <string-array name="no_appointment_status">
        <item>Available</item>
        <item>Absence</item>
    </string-array>
    <string-array name="gender_list">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="currency_list">
        <item>INR</item>
        <item>USD</item>
        <item>Euro</item>
    </string-array>
    <string-array name="dependent_relations">
        <item>self</item>
        <item>Wife</item>
        <item>Daughter</item>
        <item>Son</item>
        <item>Father</item>
        <item>Mother</item>
        <item>Brother</item>
        <item>Sister</item>
        <item>Friend</item>
        <item>Pet</item>
        <item>Assistant</item>
        <item>Other</item>
    </string-array>
    <string-array name="patient_professions">
        <item>IT Profession</item>
        <item>Healthcare</item>
        <item>Scientist</item>
        <item>Judiciary</item>
        <item>Social Worker</item>
        <item>Government Employee</item>
        <item>Banking</item>
        <item>Insurance</item>
        <item>Engineer</item>
        <item>Teaching</item>
        <item>Student</item>
        <item>House Wife</item>
        <item>Other</item>
    </string-array>
    <string-array name="assistant_professions">
        <item>Homecare Nurse</item>
        <item>Emergency Nurse</item>
        <item>Old Age Nurse</item>
        <item>Critical Care Nurse</item>
        <item>Orthopedic Nurse</item>
        <item>Nurse Practitioner</item>
        <item>Clinical Nurse </item>
        <item>Neonatal Nurse</item>
        <item>Daycare Nurse</item>
        <item>Full Day Nurse</item>
        <item>Part Time Nurse</item>
        <item>Other</item>
    </string-array>
    <string-array name="type_list">
        <item>String</item>
        <item>Numeric</item>
        <item>String</item>
        <item>Currency</item>
        <item>Date</item>
        <item>String</item>
        <item> % Numeric</item>
        <item>Note</item>
        <item>Custom</item>
    </string-array>
    <string-array name="search_by">
        <item>Name</item>
        <item>Mobile</item>
        <item>Email</item>
        <item>Registration Id</item>
        <item>Speciality</item>
    </string-array>
    <string-array name="name_list">
        <item>Name</item>
        <item>Cost</item>
        <item>Procedure Date</item>
        <item>Currency</item>
        <item>Discount</item>
        <item>Taxes</item>
        <item>Total</item>
        <item>Custom</item>
    </string-array>
    <string-array name="category_list">
        <item>Category1</item>
        <item>Category2</item>
        <item>Category3</item>
        <item>Category4</item>
        <item>Category5</item>
        <item>Category6</item>
        <item>Category7</item>
        <item>Category8</item>
    </string-array>
    <string-array name="days_list">
        <item>Day</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="month_list">
        <item>MONTH</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="year_list">
        <item>YEAR</item>
        <item>1980</item>
        <item>1981</item>
        <item>1982</item>
        <item>1983</item>
        <item>1984</item>
        <item>1985</item>
        <item>1986</item>
        <item>1987</item>
        <item>1988</item>
        <item>1989</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
    </string-array>
    <string-array name="speciality_list">
        <item>Gynachologic</item>
        <item>Pedriatic</item>
    </string-array>
    <string name="select_visit_type">Selct Visitor Type</string>
    <string-array name="visit_type_list">
        <item>New Case</item>
        <item>Follow up</item>
        <item>Reports</item>
        <item>Immunization</item>
        <item>" "</item>
    </string-array>
    <string-array name="visit_status">
        <item>Visited</item>
        <item>Absence</item>
        <item>Scheduled</item>
    </string-array>
    <string-array name="holiday_choice">
        <item>Available</item>
        <item>Absense</item>
    </string-array>
    <string-array name="symptoms">
        <item>Abdominal Pain</item>
        <item>Acute Diarrhoea in Adults</item>
        <item>Acute Diarrhoea in Children</item>
        <item>Atrophic Vaginitis (Vaginal Dryness)</item>
        <item>Chest Pain</item>
        <item>Cough</item>
        <item>Dizziness</item>
        <item>Dry Eyes</item>
        <item>Headache</item>
        <item>Jaundice</item>
        <item>Itching</item>
        <item>Oedema</item>
        <item>Fever</item>
        <item>Epilepsy</item>
        <item>Skin Rashes</item>
        <item>Weight Loss</item>
        <item>Tinnitus</item>
    </string-array>
    <string-array name="diagnosis">
        <item>Abdominal Pain</item>
        <item>Acute Diarrhoea in Adults</item>
        <item>Acute Diarrhoea in Children</item>
        <item>Atrophic Vaginitis (Vaginal Dryness)</item>
        <item>Chest Pain</item>
        <item>Cough</item>
        <item>Dizziness</item>
        <item>Dry Eyes</item>
        <item>Headache</item>
        <item>Jaundice</item>
        <item>Itching</item>
        <item>Oedema</item>
        <item>Fever</item>
        <item>Epilepsy</item>
        <item>Skin Rashes</item>
        <item>Weight Loss</item>
        Tinnitus
    </string-array>
    <string-array name="medicin_list">
        <item>Ibrufen 400 mg</item>
        <item>Dextrose</item>
        <item>Avelox</item>
        <item>Crocin</item>
        <item>Victo</item>
        <item>Combiflam</item>
        <item>Sumo</item>
        <item>nise</item>
        <item>Paracitamal</item>
        <item>Bicasule</item>

    </string-array>
    <string-array name="scheduleDateList">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string-array name="medicine_type_list">
        <item>Alopathic</item>
        <item>Homeopathic</item>
        <item>Ayurvedic</item>
    </string-array>
    <string-array name="file_upload_category_list">
        <item>Prescription</item>
        <item>Diagnostic Reports</item>
        <item>Registration</item>
        <item>Invoice</item>
        <item>History</item>
        <item>Treatment</item>
        <item>Physiotherapy</item>
        <item>Other</item>
    </string-array>
    <string-array name="upload_document_type">
        <item>Current Visit</item>
        <item>Previous Visits</item>
        <item>History</item>
    </string-array>
    <string-array name="diagnostic_test_type_list">
        <item>All</item>
        <item>X-ray</item>
        <item>Biopsy</item>
        <item>Blood Test</item>
        <item>Electrocardiogram</item>
        <item>Antigen</item>
        <item>MRI</item>
        <item>CAT Scan</item>
        <item>Urin Test</item>
        <item>Imaging</item>
        <item>Endoscopy</item>
        <item>Biopsy</item>
        <item>Genetic</item>
    </string-array>
    <string-array name="diagnostic_test_referred">
        <item>Self</item>
        <item>Doctor</item>
    </string-array>
    <string-array name="mark_as">
        <item>Not Available</item>
        <item>Available</item>
        <item>Busy</item>
    </string-array>
     <string name="appointment_type">Appointment Type : </string>
     <string name="appointment">Appointment Date : </string>
    <string name="last_visited">Last Visited : </string>
    <string name="upcoming_appointment">Upcoming Appointment : </string>
     <string name="bookappointment">BOOK</string>
    <string name="appointments">Appointments</string>
    <string name="profile_details">Profile Details</string>
     <string name="prescribedby">Prescribed by : </string>
     <string name="medicine_start_date">Start Date : </string>
     <string name="medicine_end_date">End Date :</string>
     <string name="medicine_status">Status : </string>
</resources>