<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">
    <RelativeLayout
        android:id="@+id/layout10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/images"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/doctor_image"
            android:layout_width="@dimen/default_profile_image_size"
            android:layout_height="@dimen/default_profile_image_size"
            android:layout_margin="@dimen/default_profile_image_margin"
            android:background="@drawable/doctor_default"/>

        <ImageView
            android:id="@+id/downImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/doctor_image"
            android:background="@drawable/arrow_down_red"
            android:scaleType="center" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/images"
            android:background="#ffffff">

            <TextView
                android:id="@+id/doctor_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Doctor Name"
                android:textAppearance="@style/heading1.1_blue" />

            <ImageView
                android:id="@+id/nextBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/ic_navigate_next_black_24dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="2dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/totalCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/nextBtn"
                android:inputType="number"
                android:layout_marginTop="4dp"
                android:text="0"
                android:textAppearance="@style/sub_heading3"
                />
            <TextView
                android:id="@+id/speciality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/doctor_name"
                android:text="Speciality"
                android:textAppearance="@style/sub_heading3" />

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/speciality"
                android:text="fdfd"
                android:textAppearance="@style/sub_heading3" />
            <TextView
                android:id="@+id/lastAppointment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/address"
                android:text="@string/last_visited"
                android:textAppearance="@style/sub_heading5"/>
            <TextView
                android:id="@+id/lastAppointmentValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/address"
                android:layout_toRightOf="@+id/lastAppointment"
                android:text="12-04-2015"
                android:textAppearance="@style/sub_heading5_light_grey"/>

            <TextView
                android:id="@+id/appointmentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lastAppointment"
                android:text="@string/upcoming_appointment"
                android:textAppearance="@style/sub_heading5"/>

            <TextView
                android:id="@+id/review_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lastAppointmentValue"
                android:layout_toRightOf="@+id/appointmentText"
                android:text="sdfsdf"
                android:layout_marginBottom="2dp"
                android:textAppearance="@style/sub_heading5_light_grey"/>


        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout10"
        android:id="@+id/layout11"
        android:visibility="gone"
         >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout2"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#ffffff">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout3"
                android:layout_centerHorizontal="true"
                android:background="#ffffff">


                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:id="@+id/appointment"
                    android:text="@string/appointments"
                    android:textAppearance="@style/sub_heading3"
                    android:layout_weight="5"
                    android:background="@drawable/page_default"

                    />
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:text="@string/profile_details"
                    android:textAppearance="@style/sub_heading3"
                    android:layout_toRightOf="@+id/appointment"
                    android:layout_weight="5"
                    android:background="@drawable/page_selected"
                    android:id="@+id/profile"
                    />
            </LinearLayout>

        </RelativeLayout>
        <FrameLayout
            android:id="@+id/content_details"
            android:layout_width="match_parent"
            android:layout_below="@+id/layout2"
            android:layout_height="fill_parent"/>
    </RelativeLayout>
</RelativeLayout>
