<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">
    <LinearLayout
        android:id="@+id/images"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/doctor_image"
            android:layout_width="@dimen/default_profile_image_size"
            android:layout_height="@dimen/default_profile_image_size"
            android:layout_margin="@dimen/default_profile_image_margin"
            android:background="@drawable/doctor_default"/>

        <ImageView
            android:id="@+id/downImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/doctor_image"
            android:background="@drawable/arrow_down_red"
            android:scaleType="center" />
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/layout_appointment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/images"
        android:background="#ffffff">

        <TextView
            android:id="@+id/doctor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Doctor Name"
            android:textAppearance="@style/heading1.1_blue" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_hight"
            android:visibility="gone"
            android:layout_alignParentRight="true"
            android:id="@+id/bookOnline"
            android:text="@string/bookappointment"
            android:layout_marginTop="3dp"
            android:layout_marginRight="5dp"
            android:textAppearance="@style/body5"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/add"
            android:id="@+id/add_profile"
            android:text=""
            android:visibility="gone"
            android:layout_marginTop="3dp"
            android:layout_marginRight="10dp"
            android:textAppearance="@style/body5"/>
        <ImageView
            android:id="@+id/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/ic_navigate_next_black_24dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="2dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/totalCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/nextBtn"
            android:inputType="number"
            android:layout_marginTop="6dp"
            android:text="0"
            android:textAppearance="@style/sub_heading3"
            />
        <TextView
            android:id="@+id/speciality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/doctor_name"
            android:text="Speciality"
            android:textAppearance="@style/sub_heading3" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/speciality"
            android:text="fdfd"
            android:textAppearance="@style/sub_heading3" />
        <TextView
            android:id="@+id/appointment_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/address"
            android:text="@string/appointment"
            android:textAppearance="@style/sub_heading5"/>
        <TextView
            android:id="@+id/appointment_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/address"
            android:layout_toRightOf="@+id/appointment_text"
            android:text="12-04-2015"
            android:textAppearance="@style/sub_heading5_light_grey"/>

        <TextView
            android:id="@+id/appointment_type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appointment_text"
            android:text="@string/appointment_type"
            android:textAppearance="@style/sub_heading5"/>

        <TextView
            android:id="@+id/appointment_type_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appointment_value"
            android:layout_toRightOf="@+id/appointment_type_text"
            android:text=""
            android:layout_marginBottom="2dp"
            android:textAppearance="@style/sub_heading5_light_grey"/>
        <TextView
            android:id="@+id/appointment_status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appointment_type_text"
            android:text="@string/appointment_status"
            android:textAppearance="@style/sub_heading5"/>

        <TextView
            android:id="@+id/appointment_status_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appointment_type_value"
            android:layout_toRightOf="@+id/appointment_status_text"
            android:text=""
            android:layout_marginBottom="2dp"
            android:textAppearance="@style/sub_heading5_light_grey"/>

    </RelativeLayout>
    <LinearLayout
        android:layout_below="@+id/layout_appointment"
        android:layout_toRightOf="@+id/images"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_alignParentRight="true"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_hight"
            android:gravity="center"
            android:id="@+id/cancel_btn"
            android:layout_toLeftOf="@+id/change_btn"
            style="@style/body11_red_button_style"
            android:layout_alignBaseline="@+id/appointment_date_time"
            android:text="Cancel"
            android:visibility="visible"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_hight"
            android:gravity="center"
            android:id="@+id/change_btn"
            android:padding="3dp"
            android:layout_below="@+id/feedback_btn"
            android:layout_alignParentRight="true"
            style="@style/body11_blue_button_style"
            android:layout_alignBaseline="@+id/appointment_date_time"
            android:layout_marginLeft="20dp"
            android:text="Reschedule"
            android:layout_centerHorizontal="true"
            android:visibility="visible"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_hight"
            android:gravity="center"
            android:id="@+id/feedback_btn"
            android:layout_alignParentRight="true"
            style="@style/body11_blue_button_style"
            android:visibility="gone"
            android:text="Feedback"
            />

    </LinearLayout>

</RelativeLayout>
